--- a/mlkstyles.css
+++ b/mlkstyles.css
@@ -1,3 +1,4 @@
+
 .container {
     background-image: url(https://learntocodequickly.com/wp-content/uploads/2021/01/mlk-1-1.jpg);
     background-position: top center;
@@ -5,12 +6,13 @@
     background-attachment: fixed;
     background-size: cover;
     background-color: #333333;  
-    padding: 400px 0 400px 0;
+    padding: 450px 0 450px 0;
 }
 @media screen and (max-width: 900px) { 
 		.container {
 			background-image: url(https://learntocodequickly.com/wp-content/uploads/2021/01/mlk-1-3.jpg);
-    background-position: center center;
+            background-position: center;
+            background-attachment: scroll;
         }
         #one {
             background-image: url(https://learntocodequickly.com/wp-content/uploads/2021/01/mlk-12-2.jpg);
@@ -25,10 +27,10 @@
             background-image: url(https://learntocodequickly.com/wp-content/uploads/2021/01/mlk-4-2.jpg);
         }
         #five {
-            background-image: url(https://learntocodequickly.com/wp-content/uploads/2021/01/mlk-2-3.jpg);
+            background-image: url(https://learntocodequickly.com/wp-content/uploads/2021/01/mlk-6-2.jpg);
         }
         #six {
-            background-image: url(https://learntocodequickly.com/wp-content/uploads/2021/01/mlk-6-2.jpg);
+            background-image: url(https://learntocodequickly.com/wp-content/uploads/2021/01/mlk-2-3.jpg);
         }
         #seven {
             background-image: url(https://learntocodequickly.com/wp-content/uploads/2021/01/mlk-7-2.jpg);
@@ -62,10 +64,10 @@
     background-image: url(https://learntocodequickly.com/wp-content/uploads/2021/01/mlk-4-1.jpg);
 }
 #five {
-    background-image: url(https://learntocodequickly.com/wp-content/uploads/2021/01/mlk-2-1.jpg);
+    background-image: url(https://learntocodequickly.com/wp-content/uploads/2021/01/mlk-6-1.jpg);
 }
 #six {
-    background-image: url(https://learntocodequickly.com/wp-content/uploads/2021/01/mlk-6-1.jpg);
+    background-image: url(https://learntocodequickly.com/wp-content/uploads/2021/01/mlk-2-1.jpg);
 }
 #seven {
     background-image: url(https://learntocodequickly.com/wp-content/uploads/2021/01/mlk-7-1.jpg);
@@ -89,6 +91,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: montserrat, sans-serif;
     font-weight: 800;
     font-size: 4rem;
+    text-transform: uppercase;
     color: #444;
     letter-spacing: 6px;
     text-align: center;
@@ -106,9 +109,18 @@ h3 span {
     background-color: #FFF;
   }
 h4 {
-    font-size: 16px;
+    font-family: montserrat, sans-serif;
+    font-weight: 800;
+    font-size: 22px;
+    color: #333;
     letter-spacing: 0px;
-    padding: 0px 0px 20px 0px;
+    text-align: center;
+    padding: 30px 0px 5px 0px;
+   }
+h4 span {
+    background-color: #FFF;
+    padding: 5px 15px 5px 15px;
+    opacity: .9;
 }
 h5 {
     color: #FFF;
@@ -125,24 +137,49 @@ h6 span {
     border: 5px solid #333;
 }
 p {
-    color: #333;
-    font-family: "Fraunces", serif;
-    font-size: 14px;
+    color: #777;
+    font-family: "Lato", serif;
+    font-size: 1rem;
     text-align: left;
     letter-spacing: 1px;
+}
+a.links:link {
+    color: #333;
+    }
+  a.links:visited {
+    color: #444;
+    }
+  a.links:hover {
+    color: rgb(179, 205, 243);
+    }
+.caption {
+    font-family: montserrat, sans-serif;
+    font-weight: 800;
+    font-size: 10px;
+    color: #FFF;
+    opacity: 0.3
+    letter-spacing: 0px;
+    text-align: center;
+    text-transform: uppercase;
+}
+.caption span {
+    background-color: #333;
+    padding: 5px 15px 5px 15px;
+    opacity: .3;
 }
 .audio {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 30px 0 30px 0;
 }
 #dream {
-    padding: 25px 0px 350px 0px;
+    padding: 25px 0px 25px 0px;
   }
 .column1 {
     float: left;
-    width: 40%;
-    padding: 0 3% 0 7%;
+    width: 33%;
+    padding: 0 2% 0 15%;
     }
   .row:after {
     content: "";
@@ -151,14 +188,14 @@ p {
   }
   @media screen and (max-width: 900px) {
     .column1 {
-      width: 100%;
-      padding: 0 20px 0 20px;
+      width: 90%;
+      padding: 0 5% 0 5%;
     }
   }
   .column2 {
     float: left;
-    width: 40%;
-    padding: 0 7% 0 3%;
+    width: 33%;
+    padding: 0 15% 0 2%;
     }
   .row:after {
     content: "";
@@ -167,27 +204,30 @@ p {
   }
   @media screen and (max-width: 900px) {
     .column2 {
-      width: 100%;
-      padding: 0 20px 0 20px;
+      width: 90%;
+      padding: 0 5% 0 5%;
     }
   }
-  .img-div {
+  #img-div {
           width:100%;
           margin-left: auto;
           margin-right: auto;
     padding: 150px 0 0 0;
         }
-  #img {
+  #image {
       display: block;
     width: 50%;
       margin-left: auto;
       margin-right: auto 
   }
   #img-caption {
-      font-family: serif;
-    size: 16px;
-    color: #333;
+    size: 1rem;
+    color: #777;
     text-align: center;
+    margin: 0 0 60px 0;
+  }
+  .video {
+      margin: 120px 0 0 0;
   }
   .footer {
     display: flex;
@@ -196,30 +236,6 @@ p {
     background-color: #000;
     padding: 100px 0px 100px 0px;
     }
-  .button {
-    transition-duration: 0.5s;
-    background-color: #DDD;
-    border: #FFF;
-    border: 2px solid #FFF;
-    border-radius: 40px;
-    padding: 20px 15px 20px 15px;
-    font-size: 18px;
-    font-family: Montserrat, sans-serif;
-    font-weight: bold;
-    color: #333;
-      }
-  .button:hover {
-    background-color: #333; 
-    color: #FFF;
-  }
-  a.button:link {
-    color: #333;
-  text-decoration: none;}
-  a.button:visited {
-      color: #333;
-      text-decoration: none;
-    ;}
-  a.button:hover {
-    color: #FFF;
-    text-decoration: none;
+  .donate {
+      height: 5rem;
   }
